# static-linking-excercise

./: readme.md
example1/liba/libmockca/src/: mockc.c
example1/liba/src/: a.c
example1/libb/: CMakeLists.txt
example1/libb/libmockcb/src/: mockc.c
example2/liba/: CMakeLists.txt
example2/liba/libmockca/: CMakeLists.txt
example2/libb/: CMakeLists.txt
example2/libb/libmockcb/include/: mockc.h
example3/: CMakeLists.txt
example3/liba/: CMakeLists.txt
example3/libb/: CMakeLists.txt
example3/libb/src/: b.c
